--- a/viewer/viewer/Base.lproj/Main.storyboard
+++ b/viewer/viewer/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fWD-hF-8kn">
-                                <rect key="frame" x="0.0" y="32" width="359" height="603"/>
+                                <rect key="frame" x="16" y="219" width="366" height="415"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bfK-Kw-ZWh">
@@ -55,7 +55,15 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" title="CollectionViewDemo" id="9XE-hx-rKE"/>
+                    <navigationItem key="navigationItem" title="CollectionViewDemo" id="9XE-hx-rKE">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="fKj-LA-V6m">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Ukh-ha-4yK">
+                                <rect key="frame" x="276" y="7" width="83" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="MyCollectionView" destination="fWD-hF-8kn" id="duJ-T9-LQk"/>
                     </connections>
